--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ margin-bottom: 26px;
   /* fz  */
   font-size: 14px;
 }
-.form button {
+.btn{
   /* ff:  */
   font-family: "Roboto", sans-serif;
   /* tt  */
