--- a/Activity3/style.css
+++ b/Activity3/style.css
@@ -1,12 +1,70 @@
+.mainContainer{
+    width: 100%;
+    height: 100%;
+    margin: 100px;
+    margin: auto;
+    background: blue;
+}
+.con{
+    /* background-color: red; */
+    width: 400px;
+    height: 100px;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    border: none;
+    outline: none;
+    margin-left: 100px;
+  float: left;   
+    
+}
+.btn{
+    width: 400px;
+    height: 100px;
+    margin: auto;
+}
+
+.display{
+    width: 400px;
+    height: 100px;
+    float: left;
+    margin-top: 100px;
+}
+.button{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    border-radius: 20px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.checkboxes{
+    width: 80%;
+    height: 150px;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    border: none;
+    outline: none;
+    margin-top: 100px;
+    margin-left: 100px;
+  float: left;  
+}
 .text {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+  width: 400px;
+  height: 40px;
+  border: none;
+  outline: none;
+  margin-top: 20px;
+
   }
+
   
   .textbox .text::placeholder {
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     left: 0;
   }
