--- a/Activity3/style.css
+++ b/Activity3/style.css
@@ -1,70 +1,96 @@
+body{
+    font-weight: bold;
+    display: block;
+}
+form{
+    display: block;
+}
 .mainContainer{
-    width: 100%;
-    height: 100%;
-    margin: 100px;
-    margin: auto;
-    background: blue;
+    width: auto;
+    height: auto;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    /* background: blue; */
+    display: block;
+    padding: 25px;
+    /* border: 0.05em solid red; */
 }
 .con{
     /* background-color: red; */
-    width: 400px;
+    width: 500px;
     height: 100px;
     padding: 10px;
     border-radius: 20px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     border: none;
     outline: none;
-    margin-left: 100px;
-  float: left;   
+    margin-left:30px;
+    margin-right: 25px;
     
 }
-.btn{
-    width: 400px;
-    height: 100px;
-    margin: auto;
-}
-
-.display{
-    width: 400px;
-    height: 100px;
-    float: left;
-    margin-top: 100px;
-}
-.button{
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    border-radius: 20px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-.checkboxes{
-    width: 80%;
-    height: 150px;
-    padding: 10px;
-    border-radius: 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    border: none;
-    outline: none;
-    margin-top: 100px;
-    margin-left: 100px;
-  float: left;  
-}
 .text {
-  width: 400px;
-  height: 40px;
+  width: 500px;
+  height: 50px;
   border: none;
   outline: none;
   margin-top: 20px;
 
   }
+.ContainerTextbox{
+  /* border: 0.05em solid red; */
+  width:100%;
+  display: flex;
+  justify-content: center;
+}
+.checkboxes{
+  /* border: 0.05em solid red; */
+  width:100%;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  border: none;
+  outline: none;
+}
+.containerCheckboxes{
+  margin-top: 50px;
+  /* border: 0.05em solid red; */
+  width:100%;
 
-  
-  .textbox .text::placeholder {
+
+}
+.btn{
+  /* border: 0.05em solid red; */
+  width:100%;
+  display: flex;
+  justify-content: center;
+}
+
+.display{
+  /* border: 0.05em solid red; */
+  width: auto;
+  height: 200px;
+}
+.button {
+    margin-top: 20px;
+    position: relative;
+    background-color: grey;
+    border: none;
+    font-size: 28px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 20px;
+  }
+.textbox .text::placeholder {
     /* position: absolute; */
     top: 0;
     left: 0;
   }
+  /*  */
