--- a/Activity5-Bootstrap/style.css
+++ b/Activity5-Bootstrap/style.css
@@ -5,6 +5,9 @@ padding: 25px;
 .bStyle{
   /* border-style: solid; */
 }
+.bStyleC{
+  border-style:solid red;
+}
 
 .roundYellow{
   background-color: #eea302;
@@ -45,8 +48,9 @@ padding: 25px;
  margin-left: 10px;
  margin-top: 5px;
 }
-.nav-item{
- 
+.divsizing{
+ height: 100px;
+ width: 100px;
 }
 .rightNavBar{
   text-align: center;
@@ -63,6 +67,9 @@ padding: 25px;
 }
 .mar{
   margin: 20px;
+}
+.mar50{
+  margin: 50px;
 }
 .lFont{
   font-size: 100px;
