--- a/Activity7/css/bootstrap.css
+++ b/Activity7/css/bootstrap.css
@@ -47,6 +47,8 @@
   --bs-dark-rgb: 33, 37, 41;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
+  --bs-gray-rgb: 246,246,246;
+  --bs-darkgray-rgb: 233,233,233;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -8225,6 +8227,14 @@ textarea.form-control-lg {
 .bg-white {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
+}
+.bg-gray{
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-gray-rgb), var(--bs-bg-opacity)) !important;
+}
+.bg-darkgray{
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-darkgray-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-body {
